--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,9 +6,9 @@ tag_name = {new_version}
 
 [bumpversion:file:batchbeagle/__init__.py]
 
-[bumpversion:file:README.md]
-search = batchbeagle-{current_version}
-replace = batchbeagle-{new_version}
+#[bumpversion:file:README.md]
+#search = batchbeagle-{current_version}
+#replace = batchbeagle-{new_version}
 
 [bumpversion:file:docs/source/conf.py]
 
